// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-vsam (LONG) creates vsam 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace {zowe.setup.dataset.prefix} with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace {zowe.runtimeDirectory} with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Note: Use backslash in MYCONFIG or MYSCHEMA as continuation char.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//*     FILE /long/path/to/another/configuration/\\
//*     zowe.yaml
//*
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWECSVSM) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWECSVSM)
--- JCL Content ---
//ZWECSVSM JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* Zowe Open Source Project
//* This JCL creates the VSAM data set for the Caching Service.
//*
//*
//* CAUTION: This is neither a JCL procedure nor a complete job.
//* Before using this JCL, you will have to make the following
//* modifications:
//*
//* 1) Add job name and job parameters to the JOB statement, to
//*    meet your system requirements.
//*
//* When using RLS, customize the definitions in the RLS DD:
//*
//* 2) Optionally, change LOG option NONE to UNDO or ALL to set the
//*    desired recovery options for the RLS VSAM.
//*
//*
//* Note(s):
//*
//* 1. This job should complete with return code 0.
//*
//********************************************************************
//*
//ALLOC    EXEC PGM=IDCAMS,REGION=0M
//SYSPRINT DD SYSOUT=*
//SYSIN    DD *
  DEFINE CLUSTER -
   (NAME(TEST.DATASET.PFX.VSAMTEST) -
//         DD DDNAME=NONRLS
//         DD *
    REC(80 20) -
    INDEXED) -
   DATA(NAME(TEST.DATASET.PFX.VSAMTEST.DATA) -
    RECSZ(4096 4096) -
    UNIQUE -
    KEYS(128 0)) -
   INDEX(NAME(TEST.DATASET.PFX.VSAMTEST.INDEX) -
    UNIQUE)
//RLS      DD *
    STORCLAS() -
    LOG(NONE) -
//NONRLS   DD *
    VOLUME(TSTVOL) -
    SHAREOPTIONS(2 3) -
//*
--- End of JCL ---
Submitting Job ZWECSVSM
Job ZWECSVSM(JOB00000) completed with RC=0
>> Zowe Caching Service VSAM storage is created successfully."
`;

exports[`init-vsam (SHORT) error yaml 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWECSVSM) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWECSVSM)
--- JCL Content ---
//ZWECSVSM JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* Zowe Open Source Project
//* This JCL creates the VSAM data set for the Caching Service.
//*
//*
//* CAUTION: This is neither a JCL procedure nor a complete job.
//* Before using this JCL, you will have to make the following
//* modifications:
//*
//* 1) Add job name and job parameters to the JOB statement, to
//*    meet your system requirements.
//*
//* When using RLS, customize the definitions in the RLS DD:
//*
//* 2) Optionally, change LOG option NONE to UNDO or ALL to set the
//*    desired recovery options for the RLS VSAM.
//*
//*
//* Note(s):
//*
//* 1. This job should complete with return code 0.
//*
//********************************************************************
//*
//ALLOC    EXEC PGM=IDCAMS,REGION=0M
//SYSPRINT DD SYSOUT=*
//SYSIN    DD *
  DEFINE CLUSTER -
   (NAME(TEST.DATASET.PFX.VSAMTEST) -
//         DD DDNAME=NONRLS
//         DD *
    REC(80 20) -
    INDEXED) -
   DATA(NAME(TEST.DATASET.PFX.VSAMTEST.DATA) -
    RECSZ(4096 4096) -
    UNIQUE -
    KEYS(128 0)) -
   INDEX(NAME(TEST.DATASET.PFX.VSAMTEST.INDEX) -
    UNIQUE)
//RLS      DD *
    STORCLAS() -
    LOG(NONE) -
//NONRLS   DD *
    VOLUME(TSTVOL) -
    SHAREOPTIONS(2 3) -
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe Caching Service VSAM storage is created successfully."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.volume) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.volume) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 3`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.name) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 4`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.name) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 5`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.volume) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 6`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.volume) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid NONRLS configurations 7`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.volume) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid RLS configurations 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.storageClass) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid RLS configurations 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.storageClass) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid RLS configurations 3`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.storageClass) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid RLS configurations 4`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.storageClass) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) invalid RLS configurations 5`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: VSAM parameter (zowe.setup.vsam.storageClass) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) simple --dry-run 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWECSVSM) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWECSVSM)
--- JCL Content ---
//ZWECSVSM JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* Zowe Open Source Project
//* This JCL creates the VSAM data set for the Caching Service.
//*
//*
//* CAUTION: This is neither a JCL procedure nor a complete job.
//* Before using this JCL, you will have to make the following
//* modifications:
//*
//* 1) Add job name and job parameters to the JOB statement, to
//*    meet your system requirements.
//*
//* When using RLS, customize the definitions in the RLS DD:
//*
//* 2) Optionally, change LOG option NONE to UNDO or ALL to set the
//*    desired recovery options for the RLS VSAM.
//*
//*
//* Note(s):
//*
//* 1. This job should complete with return code 0.
//*
//********************************************************************
//*
//ALLOC    EXEC PGM=IDCAMS,REGION=0M
//SYSPRINT DD SYSOUT=*
//SYSIN    DD *
  DEFINE CLUSTER -
   (NAME(TEST.DATASET.PFX.VSAMTEST) -
//         DD DDNAME=NONRLS
//         DD *
    REC(80 20) -
    INDEXED) -
   DATA(NAME(TEST.DATASET.PFX.VSAMTEST.DATA) -
    RECSZ(4096 4096) -
    UNIQUE -
    KEYS(128 0)) -
   INDEX(NAME(TEST.DATASET.PFX.VSAMTEST.INDEX) -
    UNIQUE)
//RLS      DD *
    STORCLAS() -
    LOG(NONE) -
//NONRLS   DD *
    VOLUME(TSTVOL) -
    SHAREOPTIONS(2 3) -
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe Caching Service VSAM storage is created successfully."
`;

exports[`init-vsam (SHORT) skip non-vsam caching service 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Warning ZWEL0304W: Zowe Caching Service is not configured to use VSAM. Command skipped."
`;

exports[`init-vsam (SHORT) skip undefined caching service 1`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          }
        },
        "certificate": {
          "keystore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password"
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": null
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      string cannot be null for /components"
`;

exports[`init-vsam (SHORT) unset ds prefix 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) unset ds prefix 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-vsam (SHORT) unset jcllib 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-vsam (SHORT) unset jcllib 2`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-vsam (SHORT) unset vsam mode 1`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "vsam": {
            "mode": null,
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          }
        },
        "certificate": {
          "keystore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password"
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true,
          "debug": false
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "VSAM",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Validity Exceptions(s) with object at /zowe/setup/vsam
            no matching enum value at /zowe/setup/vsam/mode; expecting one of values '[NONRLS, RLS]' of type 'string'"
`;

exports[`init-vsam (SHORT) unset vsam mode 2`] = `
"Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "vsam": {
            "mode": "",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAMTEST"
          }
        },
        "certificate": {
          "keystore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password"
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true,
          "debug": false
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "VSAM",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Validity Exceptions(s) with object at /zowe/setup/vsam
            no matching enum value at /zowe/setup/vsam/mode; expecting one of values '[NONRLS, RLS]' of type 'string'"
`;

exports[`init-vsam (SHORT) valid NONRLS configurations 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWECSVSM) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWECSVSM)
--- JCL Content ---
//ZWECSVSM JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* Zowe Open Source Project
//* This JCL creates the VSAM data set for the Caching Service.
//*
//*
//* CAUTION: This is neither a JCL procedure nor a complete job.
//* Before using this JCL, you will have to make the following
//* modifications:
//*
//* 1) Add job name and job parameters to the JOB statement, to
//*    meet your system requirements.
//*
//* When using RLS, customize the definitions in the RLS DD:
//*
//* 2) Optionally, change LOG option NONE to UNDO or ALL to set the
//*    desired recovery options for the RLS VSAM.
//*
//*
//* Note(s):
//*
//* 1. This job should complete with return code 0.
//*
//********************************************************************
//*
//ALLOC    EXEC PGM=IDCAMS,REGION=0M
//SYSPRINT DD SYSOUT=*
//SYSIN    DD *
  DEFINE CLUSTER -
   (NAME(TEST.DATASET.PFX.VSAMTEST) -
//         DD DDNAME=NONRLS
//         DD *
    REC(80 20) -
    INDEXED) -
   DATA(NAME(TEST.DATASET.PFX.VSAMTEST.DATA) -
    RECSZ(4096 4096) -
    UNIQUE -
    KEYS(128 0)) -
   INDEX(NAME(TEST.DATASET.PFX.VSAMTEST.INDEX) -
    UNIQUE)
//RLS      DD *
    STORCLAS() -
    LOG(NONE) -
//NONRLS   DD *
    VOLUME(TSTVOL) -
    SHAREOPTIONS(2 3) -
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe Caching Service VSAM storage is created successfully."
`;

exports[`init-vsam (SHORT) valid RLS configuration 1`] = `
"-------------------------------------------------------------------------------
>> Initialize Zowe custom data sets
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWECSVSM) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWECSVSM)
--- JCL Content ---
//ZWECSVSM JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* Zowe Open Source Project
//* This JCL creates the VSAM data set for the Caching Service.
//*
//*
//* CAUTION: This is neither a JCL procedure nor a complete job.
//* Before using this JCL, you will have to make the following
//* modifications:
//*
//* 1) Add job name and job parameters to the JOB statement, to
//*    meet your system requirements.
//*
//* When using RLS, customize the definitions in the RLS DD:
//*
//* 2) Optionally, change LOG option NONE to UNDO or ALL to set the
//*    desired recovery options for the RLS VSAM.
//*
//*
//* Note(s):
//*
//* 1. This job should complete with return code 0.
//*
//********************************************************************
//*
//ALLOC    EXEC PGM=IDCAMS,REGION=0M
//SYSPRINT DD SYSOUT=*
//SYSIN    DD *
  DEFINE CLUSTER -
   (NAME(TEST.DATASET.PFX.VSAMTEST) -
//         DD DDNAME=NONRLS
//         DD *
    REC(80 20) -
    INDEXED) -
   DATA(NAME(TEST.DATASET.PFX.VSAMTEST.DATA) -
    RECSZ(4096 4096) -
    UNIQUE -
    KEYS(128 0)) -
   INDEX(NAME(TEST.DATASET.PFX.VSAMTEST.INDEX) -
    UNIQUE)
//RLS      DD *
    STORCLAS() -
    LOG(NONE) -
//NONRLS   DD *
    VOLUME(TSTVOL) -
    SHAREOPTIONS(2 3) -
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe Caching Service VSAM storage is created successfully."
`;
